a1/brendan_gordon/TEST_PROGRAMS/invalidtype/AMIEL_KOLLEK/bad_operations_with_literals.min
# this minilang program tries to operate poorly on literals

print "" + 0;
print 0 - "";
print ""/"test";




